# TensorParallelismBeta

./: .gitattributes  .gitignore  .gitmodules  1.txt  2.doc  2.txt  3.txt  4.txt  5.txt  CHANGELOG_PHASE1.md  CMakeLists.txt  CMakeLists_matmul.txt  Makefile  NCCL_GRAPHS.txt  ProjectBetaDocumentation  README.md  Sprint End Documentation - Feb.txt  [EOD REPORT] Adhitya Charan - 27-11-2025.txt  adhi.txt  cmake_install.cmake  comp_ce.py  csv.txt  deviceQuery  deviceQuery.cpp  dtensor  dtensor.cu  dtensor_allreduce  dtensor_allreduce.cu  dtensor_full_collectives  dtensor_full_collectives.cpp  gpt2_test.cpp  gpt_tensor_parallel_train.py  graph_comp.ipynb  kurra.py  launcher.cpp  mlp_test.py  no_passowrds.txt  paste.cpp  push.sh  push_changes.sh  (+10 more)
CustomDNN/: CustomDNN.cpp  CustomDNN.h  Makefile  dl_test.cpp  graph.ipynb
CustomDNN/PyTorch/: PyTorch_run_log.csv  debug_sync.py  pytorch_tp.py  pytorch_tp_vocab_par.py  test_emb.py
CustomDNN/attn/: attn_run_log.csv  attn_run_log_attn_shard.csv  attn_run_log_attn_shard_2.csv  attn_run_log_attn_shard_3.csv  attn_run_log_attn_shard_4.csv  attn_run_log_attn_shard_5.csv  attn_run_log_attn_shard_6.csv  attn_run_log_attn_shard_7.csv  attn_run_log_attn_shard_8.csv  attn_run_log_attn_shard_9.csv  attn_run_log_pytorch_tp.csv  graph.ipynb
CustomDNN/gpt2_tests/: Makefile  gpt2_test.cpp  gpt2_tp_pytorch.py  gpt2_tp_test.cpp  minimal_nccl_test.cpp  profile_.nsys-rep  profile_0.nsys-rep  profile_1.nsys-rep  test.cpp
DTensor/: 1  CPP_Training__log12_config.txt  CPP_Training__log1_config.txt  CPP_Training__log5_config.txt  DistributedNN_optimized_backup.h  Makefile  Makefile.autograd  README.md  TP_MLP_Training_log55_config.txt  TP_MLP_Training_log5_config.txt  TP_MLP_Training_log65_config.txt  TP_MLP_Training_log68_config.txt  TP_MLP_Training_log9_config.txt  TP_Training_log4_config.txt  benchmark_results.txt  check_sync.py  dtensor  dtensor.cpp  dtensor_allreduce_test  dtensor_allreduce_test.cpp  dtensor_full_collectives  dtensor_main.cpp  dtensor_mpi  dtensor_mpi_final  dtensor_mpi_final.cpp  gdb_trace.txt  gpt2_test.cpp  gpt2_test_new.cpp  gpt2_test_new_exec  gpt2_tp_mlp_test_exec  gpt2_tp_test_exec  latency_check.nsys-rep  latencycy_checker.nsys-rep  launcher  output.txt  paste.txt  report1.nsys-rep  report10.nsys-rep  report2.nsys-rep  report2.sqlite  (+16 more)
DTensor/CustomDNN/: CustomDNN.cpp  Makefile  graph.ipynb
DTensor/Data_Loader/: DataLoader.hpp  dl_test.cpp
DTensor/MyBlas/: MAKEFILE_GUIDE.md  Makefile
DTensor/Plotter/: plot_curve.py  training_data.txt  training_data_part2.txt
DTensor/Pytorch/: compare_runs.py  graph.ipynb  log_utils.py  pytorch_tensor_parallel.py
DTensor/TP_MLP_Training_logs/: TP_MLP_PyTorch_log9_config.txt  TP_MLP_Training_log config our TP with sync every MLP layer full parameters.txt  TP_MLP_Training_log1.csv  TP_MLP_Training_log11_config.txt  TP_MLP_Training_log12_config full parameters.txt  TP_MLP_Training_log13_config.txt  TP_MLP_Training_log2.csv  TP_MLP_Training_log28_config.txt  TP_MLP_Training_log29_config.txt  TP_MLP_Training_log3.csv  TP_MLP_Training_log33_config.txt  TP_MLP_Training_log3_config.txt  TP_MLP_Training_log4.csv  TP_MLP_Training_log5.csv  TP_MLP_Training_log5_config.txt  TP_MLP_Training_log9_config.txt
DTensor/TP_Training_logs/: TP_Training_log3_config.txt
DTensor/Tensor-Implementations/: .gitignore  Makefile  snippet_runner
DTensor/TrainingScripts/: EntropyKernels.cu  EntropyKernels.h  GPT2_TesnorParallel_test.cpp  build_log.txt  gpt2_entropy_parallel_test.cpp  gpt2_mlp_parallel_test.cpp  gpt2_parallel_test.cpp  gpt2_tp_embedding_loss_test.cpp  gpt2_tp_tied_weights_test.cpp
DTensor/TrainingSctipts/: gpt2_entropy_parallel_test.cpp  gpt2_mlp_parallel_test.cpp  gpt2_sync_verify_test.cpp
DTensor/benchmarks/: nccl_benchmark.cpp  nccl_benchmark_1.cpp  pytorch_sharding_benchmarking.py  row_parallel_breakdown.cpp  shard_benchmarking.cpp  shard_benchmarking__.cpp
DTensor/bridge/: tensor_ops_bridge.cpp  (+1 more)
DTensor_v2.0/: 1  LEARNING_REPORT_2025-12-01.md  LEARNING_REPORT_2025-12-09.md  Makefile  coordinate_mapping_functions.md.resolved  dtensor_main  gpt2_test.cpp  main.cpp  mpi_subcommunicator_deep_dive.md.resolved  paste.txt  pytorch_tensor_parallel_mlp.py  run_benchmark.sh  show_dir.sh  test1.py  test_dtensor_ops.py  test_mlp_forward.cpp  test_mlp_forward_dtensor.py  test_mpi_dtensor.py  test_multirank.sh  test_redistribute.cpp  test_redistribute.py  training_log1.csv  training_log8.csv
EOD/: [EOD REPORT] Adhitya Charan - 01-12-2025 - Part2.txt  [EOD REPORT] Adhitya Charan - 01-12-2025.txt  [EOD REPORT] Adhitya Charan - 06-12-2025.txt  [EOD REPORT] Adhitya Charan - 08-12-2025.txt  [EOD REPORT] Adhitya Charan - 28-11-2025.txt  [EOD REPORT] Adhitya Charan - 29-11-2025.txt
ForwardAndBackward/: 1.py
attn/: 1.txt  gpt2_attn.cpp  graph.ipynb  prompt.txt  test_tp_embed.py  test_tp_embed2.py  test_tp_split.py  test_tp_split2.py  train_gpt2.py  train_gpt2_tp.py
bindings/: cachingAllocator.cpp  cachingAllocator.hpp  dtensor_3d.cpp  dtensor_3d.hpp  dtensor_alloc.cpp  dtensor_alloc.hpp  dtensor_integrated.cpp  dtensor_integrated.hpp  dtensor_matmul.cpp  dtensor_matmul.hpp  dtensor_mpi.cpp  dtensor_mpi.hpp  dtensor_opt.cpp  dtensor_opt.hpp  dtensor_opt_pybind.cpp  dtensor_pybind.cpp  dtensor_pybind_3d.cpp  dtensor_pybind_integrated.cpp  dtensor_pybind_matmul.cpp
examples/: tp_mlp.py  tp_mlp_3d.py  tp_mlp_fwbw_matmul.py  tp_mlp_fwbw_opt.py  tp_mlp_integrated.py  tp_mlp_mini_fwbw.py  tp_mlp_test.py  tp_mlp_test_fwbw.py
gpt/: Pytorch_Training__log1_config.txt  Pytorch_Training__log2_config.txt  Pytorch_Training__log3_config.txt  Pytorch_Training__log6_config.txt  gpt2.py  graph.ipynb  hellaswag.py  log_utils.py  pytorch_tensor_parallel.py  trainpy.py
include/: collectives.hpp  dtensor.hpp  process_group.hpp
memory/: test_allocator  test_allocator.cpp
misc/: run_output_clean.txt  run_output_debug2.txt  run_output_fix2.txt  run_output_fix3.txt  run_output_fixed.txt  run_output_leak_test.txt  run_output_micro.txt  shard_fused_transpose_kernel.cu
reports/: 25_02pdf
tests/: test_process_group.py
(+886 files in other folders)
